fix: enhance UX